testing/tests/ui/space-pipe.stderr
error: the previous template error derives from
  --> tests/ui/space-pipe.rs:10:34
   |
10 | #[template(ext = "txt", source = "{{a |lower}}")]
   |                                  ^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/space-pipe.rs:22:34
   |
22 | #[template(ext = "txt", source = "{{a | lower}}")]
   |                                  ^^^^^^^^^^^^^^^
